--- a/docker/ubuntu/html/index.html
+++ b/docker/ubuntu/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>bch2019tokyo</title>
+        <title>not_flask_bch2019tokyo</title>
     <link rel="stylesheet" type="text/css" href="css/bch2019.css">
     <link rel="stylesheet" type="text/css" href="css/bch2019_res.css">
     <link rel="stylesheet" type="text/css" href="css/tag.css">
